--- a/src/css/forgot.scss
+++ b/src/css/forgot.scss
@@ -22,7 +22,7 @@
 		font-weight: normal;
 		margin: 0;
 	}
-	$num_carousel_items: 1;
+	$num_carousel_items: 2;
 	.input-carousel {
 		// margin: 60px 0 0 0;
 		// height: 46px;
@@ -59,6 +59,12 @@
 						text-decoration: none;
 					}
 				}
+			}
+			&[data-offset="0"] {
+				margin-left: 0;
+			}
+			&[data-offset="1"] {
+				margin-left: -100%;
 			}
 		}
 	}
