--- a/src/forgot.phtml
+++ b/src/forgot.phtml
@@ -18,7 +18,6 @@
 			  	</div>
 				<section class="input-carousel">
 					<div class="carousel-container" id="carousel-container" data-offset="0">
-
 						<form class="carousel-item" id="form-1">
 							<header class="modal-header">
 								<h1>Forgot password</h1>
@@ -33,7 +32,7 @@
 								</div>
 							</div>
 							<span class="carousel-input-error" id="email-error">&emsp;</span>
-							<div id="recaptcha" class="g-recaptcha" data-sitekey="6LdxLCcUAAAAAP8ZPgCUiGy_eY_AzLIJgLt3BSFD" data-size="invisible" data-bind="btn-finish" data-callback="finishRecovery"></div>
+							<div id="recaptcha" class="g-recaptcha" data-sitekey="<?= $captchaSiteKey ?>" data-size="invisible" data-bind="btn-finish" data-callback="finishRecovery"></div>
 							<div class="button-row">
 								<a href="./">Sign in</a>
 								<button class="btn btn-primary" id="btn-finish">
@@ -42,6 +41,11 @@
 								</button>
 							</div>
 						</form>
+						<div class="carousel-item">
+							<p>
+								An email has been sent to the address provided with a password reset link.
+							</p>
+						</div>
 					</div>
 				</section>
 			</div>
